--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.resources.static-locations=classpath:/static/
 #springMvc
 project_name=springMvc
 
-#mybatis
+mybatis
 #spring.datasource.name=spm
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spm?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
 #spring.datasource.username=root
@@ -52,4 +52,9 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.uris=
 spring.data.mongodb.isOnly=true
 
+#日志配置
+logging.file=D:/SpringMVC-DemoLog/log.log
+logging.level.org.springframework.web=DEBUG
 
+#指定为开发版
+# spring.profiles.active=dev
