--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,25 @@
-server.port=9099
+# Tomcat配置
+server.port=9196
+#session过期时间s
+server.session-timeout= 7200
+# 访问路径
+server.servlet.context-path=/
+# SSL配置
+#server.ssl.key-store=.keystore
+#server.ssl.key-store-password=mathew
+#server.ssl.key-store-type=JKS
+#server.ssl.key-alias=tomcat
 
+# thymeleaf模板设置
 spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode =LEGACYHTML5
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+# 缓存开启
+spring.thymeleaf.cache=false
 #表示所有的访问都经过静态资源路径；
 spring.mvc.static-path-pattern=/**
 #在这里表示配置静态资源根路径
