--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,3 +72,20 @@ logging.level.org.springframework.web=DEBUG
 
 #指定为开发版
 # spring.profiles.active=dev
+
+# kafka
+spring.kafka.consumer.zookeeper.connect =127.0.0.1:2181
+spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.session.timeout=6000
+spring.kafka.consumer.auto-commit-interval=100
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.topic = he-topic
+spring.kafka.consumer.group-id=he
+spring.kafka.consumer.concurrency=10
+
+spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.retries=0
+spring.kafka.producer.batch-size=4096
+spring.kafka.producer.linger=1
+spring.kafka.producer.buffer-memory=40960
